<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SizeWise Parking App</string>
    <string name="title_home">Home</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_reports">Reports</string>
    <string name="title_settings">Settings</string>
    <string name="request_sensor">Request Sensor</string>
    <string name="app_logo">App Logo</string>
    <string name="map_background">Map Background</string>
    <string name="thank_you_title">Thank You</string>
    <string name="thank_you_message">Your sensor request has been submitted</string>
    <string name="ok">OK</string>
    <string name="request_sensor_title">Request a Sensor</string>
    <string name="address_label">Address</string>
    <string name="floor_number_label">Floor Number</string>
    <string name="facing_street_label">Facing Street</string>
    <string name="upload_images">Upload Images</string>
    <string name="submit_request">Submit Request</string>
    <string name="title_map">Map</string>
    <string name="title_sensor">Sensor</string>
    <string name="title_request_sensor">Request Sensor</string>
    <string name="sensor_screen_title">Sensor</string>
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="login_successful">Login successful</string>
    <string name="error_invalid_credentials">Invalid username or password</string>
    <string name="wallet_card">No Saved Card Or Available Reward Credit</string>
</resources>